# TradingBot

./: .env  .gitignore  .google-cookie  Cargo.toml  data.txt  naivebayes.pickle  tradebot.py  webscraper.py
src/: bot.py  data_analysis.py  main.rs  sentiment_model.py  stock_order.py  webscraper.py  webscraper.rs
tmp/: data.txt
