[package]
name = "TradingBot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", features = ["blocking"] }
rsnltk = "0.1.3"
scraper = "0.18.1"
url = "2.5.0"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
